syntax = "proto3";

package telemetry.message.event;

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.telemetry.event";

import "telemetry/message/device_action.proto";
import "google/protobuf/timestamp.proto";

message DeviceActionRequestProto {
    string hub_id = 1;
    string scenario_name = 2;
    DeviceActionProto action = 3;
    google.protobuf.Timestamp timestamp = 4;
}