syntax = "proto3";

package telemetry.service.hubrouter;

import "google/protobuf/empty.proto";
import "telemetry/message/hub_event.proto";
import "telemetry/message/device_action_request.proto";

option java_package = "ru.yandex.practicum.grpc.telemetry.analyzer.hubrouter";
option java_outer_classname = "HubRouterControllerProto";

service HubRouterController {
  rpc handleDeviceAction (telemetry.message.event.DeviceActionRequestProto)
      returns (google.protobuf.Empty);
}